--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"type-check": "tsc --noEmit",
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix",
-		"format": "prettier --write ./backend",
-		"format:check": "prettier --check ./backend",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -20,6 +20,8 @@
 	"license": "MIT",
 	"type": "module",
 	"dependencies": {
+		"@types/cors": "^2.8.19",
+		"axios": "^1.10.0",
 		"cors": "^2.8.5",
 		"express": "^5.1.0"
 	},
@@ -40,6 +42,6 @@
 		"typescript-eslint": "^8.34.0"
 	},
 	"imports": {
-		"#*": "./src/*"
+		"#*": "./*/src/*"
 	}
 }
