--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.1.1",
+    "framer-motion": "^12.19.1",
+    "lightgallery": "2.9.0-beta.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^7.6.2",
+    "react-scroll": "^1.9.3",
     "react-starfield": "^1.0.3",
     "react-tooltip": "^5.29.1",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
