--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,1 @@
-{
-    "rewrites": [{ 
-        "source": "/(.*)",
-        "destination": "./backend/dist/src/"
-    }]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/backend/dist/src" }] }
