--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/backend/api/(.*)", "destination": "/backend/api" }] }
+{ "version": 2, "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }] }
