--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,7 +7,7 @@
 /node_modules
 
 # TypeScript build output
-backend/dist
+dist
 
 # OS generated files
 */.DS_Store
@@ -15,4 +15,4 @@ backend/dist
 # Test coverage
 /coverage
 
-backend/.vscode
+.vercel
