--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
 		"@types/cors": "^2.8.19",
 		"axios": "^1.10.0",
 		"cors": "^2.8.5",
-		"express": "^5.1.0",
-		"react-chartjs-2": "^5.3.0"
+		"express": "^5.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
