--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
+  "name": "nasa-space-data-explorer-client",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,7 +21,6 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
-    "react-scroll": "^1.9.3",
     "react-starfield": "^1.0.3",
     "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.10",
