--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "NODE_ENV=development tsx --watch --env-file .env backend/src/index.ts",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend && tsc -p backend",
+		"build:all": "npm install && npm install --prefix frontend && npm run build --prefix frontend && tsc -p backend",
 		"build:backend": "tsc -p backend",
 		"start": "NODE_ENV=production node --env-file .env backend/dist/src/index.js",
 		"type-check": "tsc --noEmit",
