--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@eslint/js": "^9.29.0",
 		"@tsconfig/node23": "^23.0.2",
 		"@types/express": "^5.0.3",
+		"@types/jest": "^30.0.0",
 		"@types/node": "^24.0.1",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -36,7 +37,9 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^16.0.0",
+		"jest": "^30.0.3",
 		"prettier": "^3.5.3",
+		"ts-jest": "^29.4.0",
 		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.34.0"
